--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "ai-repo",
+  "name": "@sanatan/ai",
   "scripts": {
     "build": "turbo build",
     "changeset": "changeset",
